; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_index.c_git_index_reuc_add.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_index.c_git_index_reuc_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_index_reuc_add(i32* %0, i8* %1, i32 %2, i32* %3, i32 %4, i32* %5, i32 %6, i32* %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i8* %1, i8** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32* %3, i32** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32* %5, i32** %14, align 8
  store i32 %6, i32* %15, align 4
  store i32* %7, i32** %16, align 8
  store i32* null, i32** %17, align 8
  store i32 0, i32* %18, align 4
  %19 = load i32*, i32** %9, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %24

21:                                               ; preds = %8
  %22 = load i8*, i8** %10, align 8
  %23 = icmp ne i8* %22, null
  br label %24

24:                                               ; preds = %21, %8
  %25 = phi i1 [ false, %8 ], [ %23, %21 ]
  %26 = zext i1 %25 to i32
  %27 = call i32 @assert(i32 %26)
  %28 = load i8*, i8** %10, align 8
  %29 = load i32, i32* %11, align 4
  %30 = load i32*, i32** %12, align 8
  %31 = load i32, i32* %13, align 4
  %32 = load i32*, i32** %14, align 8
  %33 = load i32, i32* %15, align 4
  %34 = load i32*, i32** %16, align 8
  %35 = call i32 @index_entry_reuc_init(i32** %17, i8* %28, i32 %29, i32* %30, i32 %31, i32* %32, i32 %33, i32* %34)
  store i32 %35, i32* %18, align 4
  %36 = icmp slt i32 %35, 0
  br i1 %36, label %42, label %37

37:                                               ; preds = %24
  %38 = load i32*, i32** %9, align 8
  %39 = load i32*, i32** %17, align 8
  %40 = call i32 @index_reuc_insert(i32* %38, i32* %39)
  store i32 %40, i32* %18, align 4
  %41 = icmp slt i32 %40, 0
  br i1 %41, label %42, label %45

42:                                               ; preds = %37, %24
  %43 = load i32*, i32** %17, align 8
  %44 = call i32 @index_entry_reuc_free(i32* %43)
  br label %45

45:                                               ; preds = %42, %37
  %46 = load i32, i32* %18, align 4
  ret i32 %46
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @index_entry_reuc_init(i32**, i8*, i32, i32*, i32, i32*, i32, i32*) #1

declare dso_local i32 @index_reuc_insert(i32*, i32*) #1

declare dso_local i32 @index_entry_reuc_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
